--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -1,6 +1,6 @@
 :root {
-    --primary: #AFC3C3;
-    --secondary: rgb(207, 219, 219);
+    --primary: #FF9900;
+    --secondary: #16205F;
     --ternary: rgb(191, 207, 207);
     --light-gray: rgb(233, 227, 220);
 }
