--- a/src/assets/scss/base/_colors.scss
+++ b/src/assets/scss/base/_colors.scss
@@ -21,7 +21,7 @@
 .bg-light-gray{
     background-color: var(--light-gray) !important;
     }
-.text-gray {
+.text-blue {
     color: var(--secondary) !important;
 
 }
