--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -9,3 +9,6 @@ color: white!important;
 border: 2px solid #16205F;
 
 }
+.dropdown-item:active{
+    background-color: #FF9900!important;
+    color: white!important;}
