--- a/src/assets/scss/components/_specialized.scss
+++ b/src/assets/scss/components/_specialized.scss
@@ -3,3 +3,6 @@
     border-left: 8px solid #fff856;
     box-shadow: 0 0 13px -1px rgba(0, 0, 0, 0.3);
   }
+  .card-specialized:hover {
+    transform: scale(1.05);
+}
