--- a/src/assets/scss/components/_nav.scss
+++ b/src/assets/scss/components/_nav.scss
@@ -1,7 +1,7 @@
 
 
 .border-blue-button{
-border: 2px solid #16205F;
+border: 2px solid #16205F!important;
 }
 .border-blue-button:hover{
 background-color: #FF9900!important;
